CCD-1572: Integrated Fortify Scan into Nightly Pipelines