@@ -18,6 +18,7 @@ repositories {
 
 dependencies {
   testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 }
 
 sourceSets {
@@ -88,6 +89,12 @@ task functional(type: Test) {
   }
 
   outputs.upToDateWhen { false }
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 cucumberReports {
